# Gaze

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/Assets/Scenes/: Example.scene  Physics2D.scene
Editor/Assets/Shaders/: Renderer2D_Circle.glsl  Renderer2D_Quad.glsl  Renderer2D_Text.glsl  Texture.glsl
Editor/Configs/: imgui.ini
Editor/SandboxProject/: CMakeLists.txt
Editor/SandboxProject/Assets/Scenes/: 3DPhysics.scene  Example.scene  Physics2D.scene
Editor/SandboxProject/Assets/Scripts/Source/: Camera.cs  Player.cs
Editor/SandboxProject/Source/: Camera.cs  Player.cs
Editor/Source/: EditorLayer.cpp  EditorLayer.h  GazeEditorApp.cpp
Editor/Source/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Gaze/: CMakeLists.txt
Gaze/Source/: Gaze.h  GazePCH.cpp  GazePCH.h
Gaze/Source/Asset/: Asset.h  AssetTypes.h  TextureImporter.cpp  TextureImporter.h
Gaze/Source/Core/: Application.cpp  Application.h  Assert.h  Base.h  Buffer.h  Core.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Memory.cpp  Memory.h  MouseCodes.h  PlatformDetection.h  Ref.cpp  Ref.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Gaze/Source/Debug/: Instrumentor.h
Gaze/Source/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  SceneEvents.h
Gaze/Source/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Gaze/Source/Math/: AABB.h  Math.cpp  Math.h
Gaze/Source/Physics/: Physics2D.h
Gaze/Source/Physics/2D/: Physics2D.h
Gaze/Source/Physics/3D/: PhysXManager.cpp  PhysXManager.h  PhysXUtils.cpp  PhysXUtils.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsSettings.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsTypes.h
Gaze/Source/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLImage.cpp  OpenGLImage.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderPass.cpp  OpenGLRenderPass.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Gaze/Source/Platform/Windows/: WindowsFileSystem.cpp  WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Gaze/Source/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Gaze/Source/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Image.cpp  Image.h  MSDFData.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPass.cpp  RenderPass.h  RenderResourceBase.cpp  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererCapabilities.h  RendererContext.cpp  RendererContext.h  RendererTypes.h  (+9 more)
Gaze/Source/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Gaze/Source/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Gaze/Source/UI/: UI.h
Gaze/Source/Utilities/: YAMLSerializationHelpers.h
Gaze/Source/Utils/: PlatformUtils.h
Sandbox/: CMakeLists.txt
Sandbox/Assets/Shaders/: Texture.glsl
Sandbox/Source/: ExampleLayer.cpp  ExampleLayer.h  ParticleSystem.cpp  ParticleSystem.h  Random.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
ScriptCore/: CMakeLists.txt
ScriptCore/Source/: Main.cs  Player.cs
ScriptCore/Source/Core/: InternalCalls.cs  Vector2.cs  Vector3.cs  Vector4.cs
ScriptCore/Source/Input/: Input.cs  KeyCode.cs
ScriptCore/Source/Scene/: Components.cs  Entity.cs
